# hope-policy-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.isp  README.md  bld  bld_policy  build_policy  git-remote-add-dover-github.sh  meta_cache.h  meta_set_factory.cc  meta_set_factory.h  meta_test.cc  metadata.h  policy_types.h  renode_interface.h  renode_validator.h  soc_cfg.yml  soc_tag_configuration.cc  soc_tag_configuration.h  standalone.cc  tag_based_validator.cc  tag_based_validator.h  tag_converter.h  tag_utils.h  validator.h  validator_exception.h
include/policy-glue/: policy_eval.h  riscv_isa.h  tag_types.h
isp-support/: install-dependencies
riscv/: debug.cc  inst_decoder.c  main.cc  rv32_validator.cc  rv32_validator.h
scripts/: md_firmware_test  run_riscv  run_riscv_gdb
soc_cfg/: README.md  dover_cfg.yml  gem5_cfg.yml  gfe-vcu118.yml  hifive_e_cfg.yml  iveia.yml  linux_virt_cfg.yml  miv_cfg.yml  sel4_hifive_cfg.yml  sel4_vcu118_cfg.yml
soc_cfg_hifive/: dover_cfg.yml  miv_cfg.yml
tagging_tools/: CodeTagger.py  ELFMetadataTagger.py  ELFSectionTagger.py  LLVMMetadataTagger.py  OpCodeTagger.py  README.md  RWXTagger.py  SOCTagger.py  TagElfFile.py  TaggingUtils.py  annotate.cc  annotate.h  asm_annotater.cc  asm_annotater.h  basic_elf_io.cc  basic_elf_io.h  comp_tagger.py  dump_tags.cc  elf_code  elf_loader.cc  elf_loader.h  elf_section_tagger.cc  elf_section_tagger.h  elf_utils.cc  elf_utils.h  embed.cc  embed.h  entity_binding.cc  entity_binding.h  file_stream.h  gen_tag_info  gen_tag_info.cc  gen_tag_info.test  llvm_metadata_tagger.cc  llvm_metadata_tagger.h  make_unique.h  md_asm_ann.cc  md_asm_ann.h  md_asm_ann_lib.cc  md_code.cc  (+45 more)
validator/: README.md
validator/datacache_sim/: cache_sim.c  sacache.c  sacache.h
validator/include/: metadata.h  metadata_cache.h  metadata_factory.h  opgroup_rule.h  option.h  platform_types.h  policy_hook.h  policy_types.h  qemu_interface.h  reader.h  renode_interface.h  renode_validator.h  reporter.h  sim_validator.h  soc_tag_configuration.h  tag_based_validator.h  tag_converter.h  tag_utils.h  validator.h  validator_exception.h
validator/include/policy-glue/: policy_eval.h  riscv_isa.h  tag_types.h
validator/pipe/: base_pipe.h  finite_pipe.cc  ideal_pipe.cc  ideal_pipe.h
validator/pipe/dmhc_pipe/: compute_hash.cc  compute_hash.h  dmhc.cc  dmhc.h  dmhc_pipe.cc  dmhc_pipe.h  perm4.c  perm6.c
validator/pipe/finite_pipe/: finite_pipe.cc  finite_pipe.h
validator/pipe/ideal_pipe/: ideal_pipe.cc  ideal_pipe.h
validator/riscv/: csr_list.h  debug.cc  fake_riscv.cc  fake_riscv.h  indexed_meta_cache.cc  indexed_meta_cache.h  inst_decoder.c  inst_decoder.cc  inst_decoder.h  main.cc  meta_cache.cc  meta_cache.h  meta_set_factory.cc  meta_set_factory.h  rv32_validator.cc  rv32_validator.h  rv_validator.cc  rv_validator.h  standalone.cc
validator/rule_analysis/: prefetching.cc  prefetching.h  rule_IO.c  rule_analysis.cc  rule_analysis.h
validator/rule_cache/: base_rule_cache.h
validator/rule_cache/dmhc_rule_cache/: compute_hash.cc  compute_hash.h  dmhc.cc  dmhc.h  dmhc_rule_cache.cc  dmhc_rule_cache.h  iperm.c  perm5.c  perm7.c
validator/rule_cache/finite_rule_cache/: finite_rule_cache.cc  finite_rule_cache.h
validator/rule_cache/ideal_rule_cache/: ideal_rule_cache.cc  ideal_rule_cache.h
validator/src/: metadata_factory.cc  opgroup_rule.cc  policy_hook.cc  soc_tag_configuration.cc  tag_based_validator.cc
